2001-11-07 23:00 GMT -3 Luiz Rafael Culik<culik@sl.conex.net>
   * utils/hbmake/hbmake.prg
     utils/hbmake/hbmake.prg
      * Fix some small problem with hbmake under linux

2001-11-07 11:30 UTC-0400 David G. Holm <dholm@jsd-llc.com>

  * contrib/libct/files.c
  	! Exclude Cygwin from the WIN32 build paths.

2001-11-07 14:55 UTC+0100 Viktor Szakats <viktor.szakats@syenar.hu>

   * source/lang/Makefile
   * makefile.bc
   * makefile.vc
     * Updated with new lang modules.
       Now only Chinese and Dutch modules are not converted, if anyone 
       feel like doing, please do.

   * make_vc.bat
     - Removed the call to create libmisc. If you need this, please 
       make a batch file and set it locally.

   * source/rtl/oldbox.c
     * Some indentation.

2001-11-07 16:10 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
  * source/lang/msgru866.c
  * source/lang/msgruwin.c
    * format changed

2001-11-07 03:55 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
   * bin\bld.bat
     * corrected typo

2001-11-07 03:05 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
   * makefile.vc
     * Correct new definitions
   * source/rtl/fstemp.c
     * added cast for msvc

2001-11-07 01:45 UTC+0100 Viktor Szakats <viktor.szakats@syenar.hu>

   * include/hbextern.ch
   * include/hbapifs.h
   * source/rtl/fstemp.c
      - Removed (made static) hb_fsTempName() low-level function, 
        since it's unsafe, and will be incorporated into hb_fsCreateTemp().
      - Removed HB_FTEMPNAME function, since it's unsafe.
      ! Fixed some recent HB_FTEMPCREATE bugs.
      + HB_FTEMPCREATE() now will store the generated filename in the 
        fourth parameter if it's passed by reference.

   * makefile.bc
     ! Fixed a bug introduced in the prev. session.

2001-11-07 01:17 UTC+0100 Viktor Szakats <viktor.szakats@syenar.hu>

   - b16_slex.bat
   - b32_slex.bat
   - vc_slex.bat
   - hb_slex.vc
   * makefile.vc
     - Removed the batch files which initated a Simplex based Harbour.